# tiq-assistant

./: .gitignore  QUICKSTART.md  pyproject.toml  requirements.txt  run.py
src/tiq_assistant/: __init__.py  __main__.py  config.py
src/tiq_assistant/core/: exceptions.py  holidays.py  models.py
src/tiq_assistant/desktop/: __init__.py  app.py  icon.py  scheduler.py  tray.py
src/tiq_assistant/desktop/widgets/: __init__.py
src/tiq_assistant/desktop/windows/: __init__.py  day_entry_dialog.py  main_window.py  settings_dialog.py  time_entry_popup.py
src/tiq_assistant/exporters/: __init__.py  excel_exporter.py
src/tiq_assistant/integrations/: __init__.py  outlook_reader.py
src/tiq_assistant/parsers/: __init__.py  outlook_parser.py
src/tiq_assistant/services/: holiday_parser.py  hour_suggestion_service.py  matching_service.py  timesheet_service.py
src/tiq_assistant/storage/: sqlite_store.py
src/tiq_assistant/web/: streamlit_app.py
tests/: __init__.py
